<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_18sdp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/gradient"
    android:id="@+id/layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    tools:context=".view.MainActivity"
    >

    <RelativeLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:id="@+id/searchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <EditText
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:backgroundTint="#E4DDED"
                android:hint="@string/search_by_city"
                android:textColor="#E4DDED"
                android:textColorHint="#E4DDED" />

            <ImageView
                android:id="@+id/search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/ic_baseline_search_24"
                android:backgroundTint="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/searchLayout">

            <LinearLayout
                android:id="@+id/cityLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="@dimen/_10sdp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/city"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_22sdp" />

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="2"
                    android:src="@drawable/humidity" />
            </LinearLayout>

            <TextView
                android:id="@+id/updatedAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/overviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_45sdp"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_below="@id/linearLayout2">

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/weather_state"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-thin"
                android:text="@string/dgree"
                android:textColor="@color/white"
                android:textSize="@dimen/_65sdp" />

            <LinearLayout
                android:id="@+id/tempLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/temp_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_temp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"/>

                <Space
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/temp_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_temp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:textColor="@color/white"
            android:weightSum="2"
            android:gravity="center_vertical"
            android:layout_below="@+id/overviewContainer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_7sdp">

                    <ImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:src="@drawable/sunrise"
                        app:tint="@color/white" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_3sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="06:40 AM"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11sdp" />

                </LinearLayout>

                <Space
                    android:layout_width="@dimen/_7sdp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_7sdp">

                    <ImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:src="@drawable/sunset"
                        app:tint="@color/white" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_3sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="06:40 AM"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11sdp" />

                </LinearLayout>


                <Space
                    android:layout_width="@dimen/_7sdp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_7sdp">

                    <ImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:src="@drawable/wind"
                        app:tint="@color/white" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_3sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="06:40 AM"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11sdp" />

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_7sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:src="@drawable/pressure"
                        app:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_3sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="06:40 AM"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11sdp" />
                </LinearLayout>

                <Space
                    android:layout_width="@dimen/_7sdp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:src="@drawable/humidity"
                        app:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_3sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Humidity"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="06:40 AM"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11sdp" />
                </LinearLayout>

                <Space
                    android:layout_width="@dimen/_7sdp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:src="@drawable/info"
                        app:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_3sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/created_by"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_name"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_9sdp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:text="@string/please_check_your_intent_connection"/>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>